methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:25: error: not found: type color
def faireV(c:color) {
             ^